// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component - Arabic should match Arabic snapshot 1`] = `
<DocumentFragment>
  <header
    class="header_section"
  >
    <div
      class="header_top"
    >
      <div
        class="container-fluid"
      >
        <div
          class="contact_nav"
        >
          <a
            class=""
            href="/ar/"
          >
            <div
              data-testid="phone-icon"
            />
            <span
              class="contact_nav-text keep-ltr"
            >
              اتصل : +01 123455678990
            </span>
          </a>
          <div
            class="language"
          >
            <span
              class="toggle"
            >
              English
            </span>
            <span
              class="separator"
            >
               | 
            </span>
            <span
              class="active"
            >
              عربي
            </span>
          </div>
          <a
            class=""
            href="/ar/"
          >
            <div
              data-testid="envelope-icon"
            />
            <span
              class="contact_nav-text"
            >
              البريد الإلكتروني : demo@gmail.com
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="header_bottom"
    >
      <div
        class="container-fluid"
      >
        <nav
          class="navbar navbar-expand-lg custom_nav-container"
        >
          <a
            class="navbar-brand"
            href="/ar"
          >
            <span>
              Inance
            </span>
          </a>
          <button
            aria-controls="navbarNav"
            aria-expanded="false"
            aria-label="Toggle navigation"
            class="navbar-toggler"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="collapse navbar-collapse "
            data-testid="navbar-collapse"
          >
            <ul
              class="navbar-nav"
            >
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/ar"
                >
                  الرئيسية
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/ar/about"
                >
                  من نحن
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/ar/service"
                >
                  خدماتنا
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/ar/contact"
                >
                  اتصل بنا
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header Component should match snapshot 1`] = `
<DocumentFragment>
  <header
    class="header_section"
  >
    <div
      class="header_top"
    >
      <div
        class="container-fluid"
      >
        <div
          class="contact_nav"
        >
          <a
            class=""
            href="/en/"
          >
            <div
              data-testid="phone-icon"
            />
            <span
              class="contact_nav-text keep-ltr"
            >
              Call : +01 123455678990
            </span>
          </a>
          <div
            class="language"
          >
            <span
              class="active"
            >
              English
            </span>
            <span
              class="separator"
            >
               | 
            </span>
            <span
              class="toggle"
            >
              عربي
            </span>
          </div>
          <a
            class=""
            href="/en/"
          >
            <div
              data-testid="envelope-icon"
            />
            <span
              class="contact_nav-text"
            >
              Email : demo@gmail.com
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="header_bottom"
    >
      <div
        class="container-fluid"
      >
        <nav
          class="navbar navbar-expand-lg custom_nav-container"
        >
          <a
            class="navbar-brand"
            href="/en"
          >
            <span>
              Inance
            </span>
          </a>
          <button
            aria-controls="navbarNav"
            aria-expanded="false"
            aria-label="Toggle navigation"
            class="navbar-toggler"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="collapse navbar-collapse "
            data-testid="navbar-collapse"
          >
            <ul
              class="navbar-nav"
            >
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/en"
                >
                  Home
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/en/about"
                >
                  About
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/en/service"
                >
                  Services
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/en/contact"
                >
                  Contact Us
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
